# multibrowse

./: .gitignore  Cargo.toml  README.md  multibrowse.py  setup.py  wintypes.py
.github/workflows/: release.yml
src/: main.rs
systems/: __init__.py  linux.py  mac.py  posix.py  win.py
