[package]
name = "multibrowse"
version = "3.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.9"

[target.'cfg(target_os="linux")'.dependencies]
regex = "1.10.2"

[target.'cfg(target_os="macos")'.dependencies]
icrate = { version = "0.0.4", features = ["AppKit_NSScreen", "Foundation_NSArray", "AppKit"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
