[package]
name = "multibrowse"
version = "3.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.9"

[target.'cfg(target_os="linux")'.dependencies]
regex = "1.10.2"

[target.'cfg(target_os="macos")'.dependencies]
icrate = { version = "0.0.4", features = ["AppKit_NSScreen", "Foundation_NSArray", "AppKit"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
